allowed level editor to specify some more advanced scripts; now it is able to recognize when you create a script of a certain type and generate some stub code to use

--- a/assets/levels/level1/scripts.yaml
+++ b/assets/levels/level1/scripts.yaml
@@ -1,11 +1,21 @@
 --- 
 ? 
+  - 6
   - 4
-  - 18
-: bird
+: hello
 
 ? 
   - 13
-  - 13
-: bird
+  - 2
+: read_sign
+
+? 
+  - 15
+  - 11
+: read_sign
+
+? 
+  - 16
+  - 11
+: read_sign
 
